Closed Bug 413930 Opened 17 years ago Closed 17 years ago

Some arrows are not visible on hover in High Contrast Inverse Theme

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: twanno, Assigned: twanno)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Tree header sort arrows and the newly added toolbar button dropdown arrows are not visible in High Contrast Inverse Theme, when the buttons/headers are hovered over. 

Also the drop down arrows have the wrong color when the menu is open.

The attached patch fixes that.
Attachment #299062 - Flags: superreview?(roc)
Attachment #299062 - Flags: review?(roc)
Attachment #299062 - Flags: superreview?(roc)
Attachment #299062 - Flags: superreview+
Attachment #299062 - Flags: review?(roc)
Attachment #299062 - Flags: review+
Attachment #299062 - Flags: approval1.9?
Comment on attachment 299062 [details] [diff] [review]
patch

a=beltzner for 1.9
Attachment #299062 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in widget/src/gtk2/nsNativeThemeGTK.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsNativeThemeGTK.cpp,v  <--  nsNativeThemeGTK.cpp
new revision: 1.140; previous revision: 1.139
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: