Bug 413930 - "Some arrows are not visible on hover in High Contrast Inverse Theme" [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a1.9=beltzner]